--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
       </button>
     </div>
   </div>
-  <script src="/js/modal.js"></script>
+  <script src="./js/modal.js"></script>
 
 </body>
 
